# mima-governance-python

./: README.md  TASKS.md  pyproject.toml
mima_governance/: __init__.py  __main__.py  _base.py  approvals.py  approvals_cmd.py  async_client.py  cli.py  client.py  config.py  daemon.py  gates.py  guard.py  policy.py  testing.py  types.py  webhooks_cmd.py
mima_governance/integrations/: __init__.py  autogen_middleware.py  deepeval_adapter.py  langchain_callback.py  langfuse_adapter.py  llamaindex_handler.py
tasks/: plan.md  todo.md
tests/: conftest.py  test_approvals.py  test_async_client.py  test_cli_suite.py  test_client.py  test_eval_adapters.py  test_gates.py  test_grc.py  test_guard_daemon.py  test_guard_otel.py  test_integrations.py  test_live_server.py  test_new_features.py  test_policy.py  test_push.py  test_signing.py  test_testing_framework.py
