[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mima-governance"
version = "0.3.5"
description = "Mima AI Governance SDK — runtime attestation, GRC evidence, and compliance testing for AI systems"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Mima", email = "sdk@mima.works" }]
keywords = ["ai", "governance", "attestation", "eu-ai-act", "iso-42001", "soc2", "nist-ai-rmf", "compliance", "grc", "langchain", "autogen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24",
    "pynacl>=1.5",
]

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20"]
langchain = ["langchain-core>=0.1"]
llamaindex = ["llama-index-core>=0.10"]
autogen = ["pyautogen>=0.2"]
policy = ["pyyaml>=6"]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "respx>=0.20", "pytest-mock>=3.10", "pyyaml>=6"]

[project.scripts]
mima = "mima_governance.cli:main"

[project.urls]
Documentation = "https://docs.mima.works/sdk"
Repository = "https://github.com/mimaworks/mima-governance-python"
